--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>AppsMart Admin</title>
+  <title>Appser Admin</title>
   <link rel="stylesheet" href="admin.css">
 </head>
 
@@ -14,7 +14,7 @@
   <header class="admin-header">
 
     <div class="admin-header-left">
-      <h1><span class="icon">⚙️</span> AppsMart Admin</h1>
+      <h1><span class="icon">⚙️</span> Appser Admin</h1>
       <p>Subir, editar y manejar aplicaciones</p>
     </div>
 
